<resources>
    <string name="app_name">AndroidLearning</string>

    <string name="map_key" translatable="false">AIzaSyDCgfGkAkgdfRyIytAG8jckmw7cyD5PNCs</string>
    <string name="alcyonTaxi" translatable="false">Alcyon Taxi</string>
    <string name="signIn" translatable="false">Sign in</string>
    <string name="signInCaps" translatable="false">SIGN IN</string>
    <string name="entertext" translatable="false">Enter your mobile no, driver ID  &amp; password</string>
    <string name="mobiletext" translatable="false">Mobile Number</string>
    <string name="mobiletextValue" translatable="false">99999123</string>
    <string name="drivertext" translatable="false">Driver ID</string>
    <string name="drivertextValue" translatable="false">GL0087</string>
    <string name="passwordText" translatable="false">Password</string>
    <string name="forgotText" translatable="false">Forgot Password?</string>
    <string name="firstnameText" translatable="false">First Name</string>
    <string name="firstnameTextValue" translatable="false">Tess</string>
    <string name="LastnameText" translatable="false">Last Name</string>
    <string name="LastnameTextValue" translatable="false">Driver</string>
    <string name="passwordTextdb" translatable="false">Password</string>
    <string name="passwordTextdbValue" translatable="false">123456</string>
    <string name="conPasswordTextdb" translatable="false">Confirm Password</string>
    <string name="conPpasswordTextdbValue" translatable="false">123456</string>
    <string name="startingKMText" translatable="false">Starting KM</string>
    <string name="startingKMTextValue" translatable="false">259</string>
    <string name="kmText" translatable="false">KM</string>
    <string name="emailText" translatable="false">Email</string>
    <string name="emailTextValue" translatable="false">greeting@gmail.com</string>
    <string name="profileText" translatable="false">Profile</string>
    <string name="tessDriverText" translatable="false">Tess Driver</string>
    <string name="versionText" translatable="false">Version: 1.0.0</string>
    <string name="locationTextDb" translatable="false">Locating address...</string>
    <string name="acc" translatable="false">Acc:</string>
    <string name="excellent" translatable="false">Excellent,</string>
    <string name="bearing" translatable="false"> Bearing: </string>
    <string name="network" translatable="false">Network:</string>
    <string name="network_value" translatable="false">Un Stable</string>
    <string name="statistics" translatable="false">Statistics</string>
    <string name="totalcompjob" translatable="false">Total Completed Jobs</string>
    <string name="totalcompjobValue" translatable="false">0</string>
    <string name="timeDriven" translatable="false">Time driven</string>
    <string name="timeDrivenValue" translatable="false">00:00</string>
    <string name="waitingTime" translatable="false">Waiting Time</string>
    <string name="waitingTimeValue" translatable="false">00:00</string>
    <string name="todayear" translatable="false">Today Earnings</string>
    <string name="todayearValue" translatable="false">0</string>
    <string name="totalear" translatable="false">Total Earnings</string>
    <string name="totalearValue" translatable="false">0</string>
    <string name="totaltrip" translatable="false">Total trips</string>
    <string name="totaltripValue" translatable="false">0</string>
    <string name="trackmytrip" translatable="false">Track my trip</string>
    <string name="myjobs" translatable="false">My jobs</string>
    <string name="dialogtext" translatable="false">You are in shift out</string>
    <string name="pluspath" translatable="false">M32,3V61 M3,32H61</string>
    <string name="equalpath" translatable="false">M3,52H61 M4,35H61</string>
    <string name="countDownNoti" translatable="false">Count down Notification</string>
    <string name="countDown" translatable="false">Count down</string>

    <string name="newequal" translatable="false">M 1 9 L 23 9 C 23.551 9 24 8.551 24 8 C 24 7.449 23.551 7 23 7 L 1 7 C 0.449 7 0 7.449 0 8 C 0 8.551
       0.449 9 1 9 Z M 1 9 M 23 15 L 1 15 C 0.449 15 0 15.449 0 16 C 0 16.551 0.449 17 1 17 L 23 17 C 23.551 17 24 16.551 24 16
       C 24 15.449 23.551 15 23 15 Z M 23 15</string>
    <string name="newplus" translatable="false">M 23.063 11.063 L 12.938 11.063 L 12.938 0.938 C 12.938 0.418 12.52 0 12 0 C 11.48 0 11.063 0.418 11.063 0.938 L
      11.063 11.063 L 0.938 11.063 C 0.418 11.063 0 11.48 0 12 C 0 12.52 0.418 12.938 0.938 12.938 L 11.063 12.938 L 11.063 23.063 C 11.063
       23.582 11.48 24 12 24 C 12.52 24 12.938 23.582 12.938 23.063 L 12.938 12.938 L 23.063 12.938 C 23.582 12.938 24 12.52 24 12 C 24 11.48
       23.582 11.063 23.063 11.063 Z M 23.063 11.063</string>
    <string name="equalpathone" translatable="false">M 21.333 192 C 9.551 192 0 182.449 0 170.667 C 0 158.885 9.551 149.333 21.333 149.334 L 99.555 149.334 L 177.777 149.334
        C 203.851 149.334 229.925 149.334 256 149.334 C 282.074 149.334 308.148 149.334 334.222 149.334 L 412.444 149.334 L 490.666 149.334 C 502.448 149.334 511.999 158.885
        511.999 170.667 C 511.999 182.449 502.448 192 490.666 192 C 464.592 192 438.518 192 412.444 192 L 334.222 192 L 314.666 192 L 295.111 192 C 288.592 192 282.074 192
        275.555 192 C 269.037 192 262.518 192 256 192 L 177.777 192 L 99.555 192 C 73.481 192 47.407 192 21.333 192 C 21.333 192 21.333 192 21.333 192 M 490.666 362.666
        C 502.448 362.666 511.999 353.115 511.999 341.333 C 512 329.551 502.449 320 490.667 320 L 490.667 320 L 21.333 320 C 9.551 320 0 329.551 0 341.333 C 0 353.115
        9.551 362.666 21.333 362.666 L 490.666 362.666</string>
    <string name="pluspathone" translatable="false">M 20 236 C 44 236 68 236 92 236 C 116 236 140 236 164 236 L 236 236 L 236 20 C 236 8.954 244.954 0 256 0
        C 267.046 0 276 8.954 276 20 L 276 236 L 492 236 C 492 236 492 236 492 236 C 503.046 236 512 244.954 512 256 C 512 267.046 503.046 276 492 276 L 384 276
        L 276 276 L 276 492 C 276 503.046 267.046 512 256 512 C 244.954 512 236 503.046 236 492 L 236 276 L 20 276 C 8.954 276 0 267.046 0 256 C 0 244.954 8.954 236 20
        236 M 256 341.333 C 256 341.333 256 341.333 256 341.333 C 256 341.333 256 341.333 256 341.333 L 256 341.333 L 256 341.333 C 256 341.333 256 341.333 256 341.333
        C 256 341.333 256 341.333 256 341.333 L 256 341.333</string>
    <string name="countValue">CountDown %1$s %2$s:%3$s %4$s</string>


    <string name="ok">Ok</string>
    <string name="info">Information</string>
    <string name="font_robot" translatable="false"><!--Roboto-Regular.ttf-->
        JosefinSans-Regular.ttf</string>
    <string name="retry">Retry</string>
    <string name="err_network">Network connection problem </string>
    <string name="Arabic" translatable="false">العربيّة</string>
    <string name="English" translatable="false">English</string>
    <string name="dia_version_title">Version Update</string>
    <string name="dia_version_description">New version(%1$s) is available in play store.</string>
    <string name="update">Update</string>
    <string name="later">Later</string>


</resources>