<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebackground"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".movemarker.taxiui.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imv_backpress"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.2"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/profileText"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/tvSizeProfile"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cirimv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle"
            android:src="@drawable/leaf"
            app:layout_constraintTop_toTopOf="@id/tv_profile">
        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/tv_tess_driver"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tessDriverText"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/tvSizeProfile">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_profile"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/firstname_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:background="@null"
                            android:hint="@string/firstnameText"
                            android:textColor="@color/colorPink"
                            android:textColorHint="@color/colorPink"
                            app:layout_constraintTop_toTopOf="@+id/tventerText">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ed_firstname"
                                android:layout_width="350dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50sp"
                                android:background="#FFFFFF"
                                android:backgroundTint="@null"
                                android:inputType="text"
                                android:textColor="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/lastname_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:background="@null"
                            android:hint="@string/LastnameText"
                            android:textColor="@color/colorPink"
                            android:textColorHint="@color/colorPink"
                            app:layout_constraintTop_toTopOf="@+id/tventerText">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ed_lastname"
                                android:layout_width="350dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50sp"
                                android:background="#FFFFFF"
                                android:backgroundTint="@null"
                                android:inputType="text"
                                android:textColor="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:background="@null"
                            android:hint="@string/passwordText"
                            android:textColor="@color/colorPink"
                            android:textColorHint="@color/colorPink">

                            <com.google.android.material.textfield.TextInputEditText

                                android:id="@+id/ed_password"
                                android:layout_width="350dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50sp"
                                android:background="#FFFFFF"
                                android:backgroundTint="@null"
                                android:inputType="textPassword"
                                android:textColor="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/confirmpassword_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:background="@null"
                            android:hint="@string/conPasswordTextdb"
                            android:textColor="@color/colorPink"
                            android:textColorHint="@color/colorPink">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ed_con_password"
                                android:layout_width="350dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50sp"
                                android:background="#FFFFFF"
                                android:backgroundTint="@null"
                                android:inputType="textPassword"
                                android:textColor="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <View
                            android:id="@+id/view_after_con_pass"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="50dp"
                            android:background="#C6C6C6">

                        </View>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/driverid_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:background="@null"
                            android:hint="@string/drivertext"
                            android:textColor="@color/colorPink"
                            android:textColorHint="@color/colorPink">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ed_driver_id"
                                android:layout_width="350dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50sp"
                                android:background="#FFFFFF"
                                android:backgroundTint="@null"
                                android:inputType="text"
                                android:textColor="@color/black" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:background="@null"
                            android:hint="@string/emailText"
                            android:textColor="@color/colorPink"
                            android:textColorHint="@color/colorPink">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ed_email"
                                android:layout_width="350dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="50sp"
                                android:background="#FFFFFF"
                                android:backgroundTint="@null"
                                android:inputType="text"
                                android:textColor="@color/black" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </ScrollView>

            </androidx.cardview.widget.CardView>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/logoutbuttonbackground"
            android:text="Save" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/logoutbuttonbackground"
            android:text="Logout" />

    </LinearLayout>


</LinearLayout>